ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/Tax_Rate__mdt.object-meta.xml
<CustomObject>
    <description>Used to store primary and secondary tax rates for a given locale</description>
    <label>Tax Rate</label>
    <pluralLabel>Tax Rates</pluralLabel>
</CustomObject>