ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date to apply to the tax rate; leave blank if this is the current date and scheduled end date in sight</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>