ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/Primary_Rate__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rate__c</fullName>
    <description>Primary Rate, based on the State/Province Code</description>
    <label>Primary Rate</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>