ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/Secondary_Location__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Location__c</fullName>
    <description>Used to store the secondary location for a tax rate, e.g. the 4-digit secondary zip code</description>
    <label>Secondary Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>