ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/Secondary_Rate__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Rate__c</fullName>
    <description>Secondary Rate, which may be based on the State/Province or the Secondary Location</description>
    <label>Secondary Rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>