ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date that this tax rate applies to; leave blank if it should be applied to anything before the end date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>