ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/State_Province_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Province_Code__c</fullName>
    <description>Used to store the 2-character State/Province Code</description>
    <label>State/Province Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>