ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Tax_Rate__mdt/fields/Taxes_Cumulative__c.field-meta.xml
<CustomField>
    <fullName>Taxes_Cumulative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If cumulative, the combined primary and secondary rates can be used; otherwise, the secondary rate is applied to the Cost + Primary Tax Amount</description>
    <label>Taxes Cumulative</label>
    <type>Checkbox</type>
</CustomField>